Modified home page.  Made progress on styles and responsiveness.  Added overflow to .container div to prevent collapsable margins.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,7 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/css3";
 
 @font-face {
     font-family: 'BlanchCapsRegular';
@@ -29,7 +30,7 @@
 }
 
 
-/*@font-face {
+@font-face {
     font-family: 'PacificoRegular';
     src: url('Pacifico-webfont.eot');
     src: url('Pacifico-webfont.eot?#iefix') format('embedded-opentype'),
@@ -38,8 +39,7 @@
          url('Pacifico-webfont.svg#PacificoRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
-}*/
+}
 
 /* latin */
 @font-face {
@@ -66,13 +66,13 @@ $dark_purple: rgb(120,55,154);
 	font-family: 'Pacifico', arial;
 }
 html {
-	/*background: rgb(120,55,154) url(../img/bg.png) no-repeat top center; 
-	background-size: 100%;
-	background-attachment: fixed; */
+	// background: rgb(120,55,154) url(../img/bg.png) no-repeat top center; 
+	// background-size: 100%;
+	// background-attachment: fixed; 
 }
 
 body {
-	background: $green; 
+	// background: $green; 
 }
 
 div.push {
@@ -83,8 +83,14 @@ div.push {
 
 nav {
 	width: 100%;
-	/*background-color: #efeff1;*/
-	background-color: $purple; 
+	// opacity: 0.75; 
+	//@include single-box-shadow;
+	@include box-shadow($purple 2px 2px 10px);
+
+	// background-color: #efeff1;
+	// background-color: $purple; 
+	background: rgba(46,56,66,0.8); 
+
 	height: 43px;
 	text-align: center;
 	position: fixed; 
@@ -110,7 +116,7 @@ nav {
 		text-decoration: none; 
 		font-family: 'League Gothic';
 		font-size: 25px;
-		color: rgb(120,55,154);
+		color: rgba(164, 135, 235, 0.85);
 	}
 
 	div a:hover {
@@ -118,6 +124,39 @@ nav {
 	}
 }
 
+/* HOME PAGE */
+.home_page {
+	width: 100%;
+	height: 100%; 
+	// max-height: 80%; 
+
+	background: rgb(120,55,154) url(../img/bg2.jpg) no-repeat center center; 
+	background-size: cover;
+
+	#message {
+		background: rgba(46,56,66,0.7); 
+		display: block;
+		margin: 40% auto 0 auto; 
+		width: 450px; 
+		height: 300px; 
+		text-align: center; 
+		position: relative; 
+		@include box-shadow(rgba(white, 0.4) 0 0 25px, rgba(white, 0.4) 0 0 3px 1px inset);
+
+
+		span {
+			display: block; 
+			font-family: 'Pacifico';
+			font-size: 50px; 
+			margin-bottom: 20px; 
+			color: white;  
+			z-index: 9999; 
+		}
+
+		span#date { padding-top: 82px; }
+	}
+
+}
 
 
 /* SECTIONS */
@@ -125,9 +164,10 @@ nav {
 	width: 100%; 
 	max-width: 709px; 
 	margin: 0 auto; 
-	border: solid 1px black;
+	// border: solid 1px transparent;
 	/*background: #efeff1; */
-	background: $dark_purple; 
+	// background: $dark_purple; 
+	overflow: auto; 
 }
 
 .main section {
@@ -142,6 +182,8 @@ nav {
   clear: both;
 }
 
+
+
 /* RESPONSIVE */
 @media all and (max-width: 620px) {
 	.push { display: none; }
@@ -155,12 +197,13 @@ nav {
 		position: relative; 
 		height: auto; 
 
-		div.container { border: none; padding: 0; margin: 0; }
+		div.container { padding: 0; margin: 0; }
 
 		a { width: 100% ; display: block; }
 	}
 
-	.main .container { border: none; }
+	.home_page #message { width: 90%; max-width: 450px; }
+
 
 }
 
